--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -6,7 +6,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Working Dancers A Documentary by Julia Martinez Heimann & Konstantina Bousmpoura">
+    <meta property="og:url" content="http://www.workingdancers.com" />
+    <meta property="og:title" content="Working Dancers" />
+    <meta property="og:description" content="A Documentary by Julia Martinez Heimann & Konstantina Bousmpoura" />
+    <meta property="og:image" content="http://www.workingdancers.com/assets/img/21.png" />
     <title>Working Dancers Documentary</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <link rel="stylesheet" href="{{root}}assets/foundation-icons/foundation-icons.css">
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
   </head>
